# Oracle_v2

./: .env.example  .gitignore  Dockerfile.hud  INVENTORY.md  README.md  SETUP.md  WRITEUP.md  baseline.py  controllable.py  demo.py  env.py  env_controllable.py  pyproject.toml  run_all.sh  subagents.py  subagents_controllable.py  subagents_oracle.py.bak  variance.py
.hud/: config.json
data/: edgar.py  gold_cache.json  mdna.py
rubric/: generate.py  graders.py
train/: build_sft.py  collect.py  collect_env.py  eval_env.py  eval_transfer.py  fireworks_sft.py  sft.example.jsonl  traces.example.jsonl  train_grpo.py  variance_controllable.py  variance_env.py
web/: README.txt  index.html  quant_firm_viewer.html
web/api/: ask.py
